[tool.poetry]
name = "slack-client"
version = "1.0.0"
description = ""
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
websockets = "*"
httpx = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
autopep8 = "*"
rope = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
